--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
         "@types/react-signature-canvas": "^1.0.4",
         "@types/xml2js": "^0.4.13",
         "cross-env": "^7.0.3",
+        "eslint": "8.56.0",
+        "eslint-config-next": "14.1.0",
         "ignore-loader": "^0.1.2",
         "puppeteer": "^21.11.0"
     }
