--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-email": "^1.9.5",
         "react-hook-form": "^7.46.1",
         "react-signature-canvas": "^1.0.6",
+        "react-toastify": "^10.0.4",
         "react-use-wizard": "^2.2.4",
         "sharp": "^0.33.0",
         "tailwind-merge": "^1.14.0",
