--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sparticuz/chromium": "^119.0.0",
     "@types/node": "20.6.2",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/kv": "^1.0.1",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -62,6 +63,7 @@
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "use-intl": "3",
+    "uuid": "^9.0.1",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2",
     "zod": "^3.22.2"
@@ -73,6 +75,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-signature-canvas": "^1.0.4",
+    "@types/uuid": "^9.0.8",
     "@types/xml2js": "^0.4.13",
     "cross-env": "^7.0.3",
     "eslint": "8.56.0",
